--- a/src/components/AboutPage/AboutPage.scss
+++ b/src/components/AboutPage/AboutPage.scss
@@ -36,7 +36,7 @@
 .title-description{
     font-weight: 300;
     color: #fff;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 1.5;
     letter-spacing: 0.1em;
     word-wrap: break-word;
@@ -92,6 +92,9 @@
 .desc-box{
     width:27.5%;
 }
+.mobile-about{
+    display: none;
+}
 @media screen and (min-width: 1025px) and (max-width: 1199px) {
     .title-text{
         font-size: 4.5rem;
@@ -115,6 +118,9 @@
         width:32.5%;
     }
     .about-page-num{
+        display: none;
+    }
+    .mobile-about{
         display: none;
     }
 }
@@ -144,29 +150,113 @@
         display: none;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .title-text{
-        font-size: 3.5rem;
+@media screen and (min-width: 481px) and (max-width: 767px) {
+    .entire-page{
+        display: none;
     }
-    .title-description{
-        margin-left:1.5rem;
-        font-size: 0.8rem;
+    .mobile-about{
+        display: flex;
+        height:100vh;
+        margin-top:5vh;
+        width: 100%;
+    }
+    .mobile-about-wrapper{
+        height:calc(100% - 5rem);
+        width:100%;
+        margin-top:5rem;
+    }
+    .mobile-about-top{
+        height:40%;
+        width:75%;
+        transform: translateX(16%);
+    }
+    .mobile-about-bottom{
+        height:45%;
+        width:75%;
+        transform: translateX(16%);
     }
     .about-image{
+        height:100%;
+        width:100%;
+        border-radius: 5px;
+        background-size: cover;
+        margin: 0;
+        -webkit-box-shadow: 0 80px 140px -40px rgb(0 0 0 / 60%);
+        box-shadow: 0 80px 140px -40px rgb(0 0 0 / 60%);
+    }
+    .mobile-about-title{
+        height:2.5rem;
+        width:100%;
+        font-size: 2.5rem;
+        text-align: left;
+        margin:1rem;
+        letter-spacing: 0.1em;
+        font-family: Poppins, sans-serif;
+        font-weight: 400;
+        text-shadow: 0 10px 30px rgb(2 11 22 / 50%);
+    }
+    .mobile-desc-box{
+        text-align: center;
+        width:100%;
+        height:45%;
+        font-size: 1rem;
+        letter-spacing: 0.1em;
+        line-height: 1.3;
+        font-weight: 300;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .entire-page{
         display: none;
     }
-    .desc-box{
-        width:calc(80%);
-        font-size: 1.1rem;
+    .mobile-about{
+        display: flex;
+        height:100vh;
+        margin-top:5vh;
+        width: 100%;
     }
-    .about-text{
-        top:42%;
+    .mobile-about-wrapper{
+        height:calc(100% - 5rem);
+        width:100%;
+        margin-top:5rem;
     }
-    .about-title{
-        transform: translateY(-50%);
-        display: unset;
+    .mobile-about-top{
+        height:40%;
+        width:75%;
+        transform: translateX(16%);
     }
-    .about-page-num{
-        display: none;
+    .mobile-about-bottom{
+        height:45%;
+        width:75%;
+        transform: translateX(16%);
+    }
+    .about-image{
+        height:100%;
+        width:100%;
+        border-radius: 5px;
+        background-size: cover;
+        margin: 0;
+        -webkit-box-shadow: 0 80px 140px -40px rgb(0 0 0 / 60%);
+        box-shadow: 0 80px 140px -40px rgb(0 0 0 / 60%);
+    }
+    .mobile-about-title{
+        height:2.5rem;
+        width:100%;
+        font-size: 2.5rem;
+        text-align: left;
+        margin:1rem;
+        letter-spacing: 0.1em;
+        font-family: Poppins, sans-serif;
+        font-weight: 400;
+        text-shadow: 0 10px 30px rgb(2 11 22 / 50%);
+    }
+    .mobile-desc-box{
+        width:100%;
+        height:45%;
+        font-size: 0.85rem;
+        text-align: center;
+        line-height: 1.3;
+        letter-spacing: 0.1em;
+        font-weight: 300;
     }
 }
