--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -42,7 +42,7 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
 .modal-container{
   width:100%;
   height:100vh;
-  transform: translateY(calc(25% - 9em));
+  transform: translateY(15%);
 }
 .modal-item{
   margin-bottom: 3vw;
@@ -69,9 +69,8 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
 }
 .modal-links{
   position: absolute;
-  left:50%;
-  right:50%;
-  bottom:0;
+  width:100%;
+  bottom:calc(0 + 50px);
   display: none;
 }
 .modal-icon{
@@ -107,7 +106,7 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
     padding-bottom:2px;
     background-image: linear-gradient(white, white);
     background-position: right -100% bottom 0;
-    background-size: 200% 10px;
+    background-size: 200% 1vw;
     background-repeat: no-repeat;
   }
   to{
@@ -115,23 +114,38 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
     padding-bottom:2px;
     background-image: linear-gradient(white, white);
     background-position: left -100% bottom 0;
-    background-size: 200% 10px;
+    background-size: 200% 1vw;
     background-repeat: no-repeat;
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 1199px) {
-  .modal-links{
-    display: none;
-  }
-  .modal-item{
-    margin-bottom: 3rem;
-  }
-  .modal-text{
-    margin-top:1.5rem;
-    font-size: 5rem;
+@media screen and (min-width: 481px) and (max-width: 1199px) {
+  .modal-container{
+    transform: translateY(20%);
   }
   .modal-links{
     display: flex;
+  }
+  .modal-item{
+
+  }
+  .modal-text{
+    margin-bottom: 2rem;
+    font-size: 3.5rem;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .modal-container{
+    transform: translateY(20%);
+  }
+  .modal-links{
+    display: flex;
+  }
+  .modal-item{
+
+  }
+  .modal-text{
+    margin-bottom: 2rem;
+    font-size: 3rem;
   }
 }
