--- a/src/components/AboutPage/AboutPage.scss
+++ b/src/components/AboutPage/AboutPage.scss
@@ -32,6 +32,7 @@
 }
 .about-spans{
     display: inline-block;
+    margin-bottom:-1.5rem;
 }
 .title-description{
     font-weight: 300;
@@ -221,7 +222,7 @@
         margin-top:5rem;
     }
     .mobile-about-top{
-        height:40%;
+        height:30%;
         width:75%;
         transform: translateX(16%);
     }
@@ -253,7 +254,7 @@
     .mobile-desc-box{
         width:100%;
         height:45%;
-        font-size: 0.85rem;
+        font-size: 0.90rem;
         text-align: center;
         line-height: 1.3;
         letter-spacing: 0.1em;
