--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -21,6 +21,19 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
   height: 100vh;
   position: fixed;
   animation: Appear 0.4s ease forwards;
+
+}
+.opacity{
+  animation: Opacity 0.4s ease forwards;
+}
+@keyframes Opacity {
+  from{
+    opacity:1;
+  }
+  to{
+    opacity: 0;
+  }
+
 }
 @keyframes Appear {
   from {
@@ -42,10 +55,10 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
 .modal-container{
   width:100%;
   height:100vh;
-  transform: translateY(15%);
+  transform: translateY(12.5%);
 }
 .modal-item{
-  margin-bottom: 3vw;
+  margin-bottom: 1.5%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,7 +69,7 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   color:white;
-  font-size: 6vw;
+  font-size: 5vw;
   cursor: pointer;
   transition-duration: 0.4s;
   letter-spacing: 0.1em;
@@ -67,16 +80,10 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
     letter-spacing: 0.3em;
   }
 }
-.modal-links{
-  position: absolute;
-  width:100%;
-  bottom:calc(0 + 50px);
-  display: none;
-}
 .modal-icon{
   color:white;
-  height:50px;
-  width:50px;
+  height:2vw;
+  width:2vw;
   margin:1rem;
   cursor: pointer;
   transition-duration: 0.4s;
@@ -121,13 +128,10 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
 
 @media screen and (min-width: 481px) and (max-width: 1199px) {
   .modal-container{
-    transform: translateY(20%);
+    transform: translateY(12.5%);
   }
   .modal-links{
     display: flex;
-  }
-  .modal-item{
-
   }
   .modal-text{
     margin-bottom: 2rem;
@@ -136,13 +140,10 @@ $modal-background: linear-gradient(to left bottom, rgb(111, 14, 113), rgb(118, 2
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .modal-container{
-    transform: translateY(20%);
+    transform: translateY(12.5%);
   }
   .modal-links{
     display: flex;
-  }
-  .modal-item{
-
   }
   .modal-text{
     margin-bottom: 2rem;
