--- a/src/components/ContactPage/ContactPage.scss
+++ b/src/components/ContactPage/ContactPage.scss
@@ -296,9 +296,7 @@ textarea{
         height:100%;
         border-radius:5px;
     }
-    .contact-text{
-        font-size: 3rem;
-    }
+
     .contact-title-main{
         display: none;
     }
@@ -317,6 +315,7 @@ textarea{
     .contact-title{
         text-align: center;
         font-size: 1.2em;
+        height: 3.25rem;
     }
     .contact-error{
         padding: 0 4vw;
